--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,29 @@
 plugins {
-    id 'java'
+    id("java")
+    id("org.springframework.boot") version "3.0.0"
 }
 
 group = 'com.claudiu'
 version = '1.0-SNAPSHOT'
+
+compileJava {
+    sourceCompatibility = 17
+    targetCompatibility = 17
+}
+
+ext {
+    springBootVersion = "3.0.0"
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+    implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    implementation("org.springframework.boot:spring-boot-starter-data-mongodb:${springBootVersion}")
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
